<?xml version="1.0"?>
<package>
  <name>drake_ros_systems</name>
  <version>0.0.1</version>
  <description>
  	Drake ROS interoperability systems
  </description>
  <author email="gizatt@mit.edu">Greg Izatt</author>
  <maintainer email="gizatt@mit.edu">Greg Izatt</maintainer>
  <license>MIT</license>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
